# tractor

./: .Rprofile  .gitattributes  .gitignore  .gitmodules  .travis.yml  CITATION.cff  COPYRIGHT.md  Dockerfile  INSTALL  INSTALL.md  Makefile  README.md  Rprofile  VERSION  md5.txt
.github/workflows/: ci.yaml  debug.yaml  docker.yaml
.nova/: Artwork  Configuration.json
etc/: md5.txt
etc/experiments/: camino2fsl.R  caminofiles.R  chfiletype.R  dicomread.R  dicomsort.R  dicomtags.R  extract.R  fsl2camino.R  gmean.R  hnt-eval.R  hnt-interpret.R  hnt-ref.R  hnt-viz.R  identify.R  imageinfo.R  mean.R  mkbvecs.R  mkroi.R  mtrack.R  peek.R  pnt-data.R  pnt-em.R  pnt-eval.R  pnt-interpret.R  pnt-ref.R  pnt-train.R  pnt-viz.R  preproc.R  proj.R  (+3 more)
lib/: .gitignore
libexec/: .gitignore  tractor_Rinstall
multicore/: NAMESPACE
src/: .gitignore  Makefile  tractor.c  tractor.h
test/: Makefile
tests/: Makefile
tractor.base/: .Rprofile  DESCRIPTION  NAMESPACE  tractor
tractor.camino/: DESCRIPTION
tractor.fsl/: .Rprofile  DESCRIPTION
tractor.graph/: DESCRIPTION  NAMESPACE
tractor.native/: DESCRIPTION  NAMESPACE  configure  configure.in
tractor.native/R/: streamline_tract.R  track.R  waypoint.R  zzz.R
tractor.native/src/: .gitignore  Makevars  Makevars.in  config.h.in  r_utils.h  track.c  track.h  vector.h  waypoint.c  waypoint.h
tractor.nt/: DESCRIPTION  NAMESPACE
tractor.reg/: DESCRIPTION  NAMESPACE
tractor.session/: DESCRIPTION  NAMESPACE
tractor.track/: .gitignore  DESCRIPTION  NAMESPACE  configure  configure.in
tractor.utils/: DESCRIPTION  NAMESPACE
(+1102 files in other folders)
